LC-834 creates calendar nav molocule

--- a/source/_patterns/03-templates/03-calendar.mustache
+++ b/source/_patterns/03-templates/03-calendar.mustache
@@ -6,14 +6,7 @@
 	<div role="main">
 		<div class="l-two-col">
 			<div class="l-main">
-				<article class="article">
-					<header class="article-header">
-						<h1>Article Headline Lorem ipsum dolor sit aweofij</h1>
-						{{> molecules-byline }}
-					</header>
-					{{> organisms-article-body }}
-				</article><!--end .article-->
-				{{> organisms-comment-thread }}
+				{{> molecules-calendar-nav }}
 			</div><!--end l-main-->
 
 			<div class="l-sidebar">
