LC-834 fixes missing drop-down menu

--- a/source/_patterns/01-molecules/05-navigation/06-calendar-nav.mustache
+++ b/source/_patterns/01-molecules/05-navigation/06-calendar-nav.mustache
@@ -7,7 +7,7 @@
 	<div class="calElement selected" style="width: 71px;">TUE<br>
 	<span class="dayNumber">Jun 16</span></div>
 	<div class="calElement" style="width: 71px;">WED<br>
-	<span class="dayNumber">Jun 17 #TEST</span></div>
+	<span class="dayNumber">Jun 17</span></div>
 	<div class="calElement today" style="width: 71px;">THU<br>
 	<span class="dayNumber">Jun 18</span></div>
 	<div class="calElement" style="width: 71px;">FRI<br>
