--- a/source/_patterns/02-organisms/00-global/00-header.mustache
+++ b/source/_patterns/02-organisms/00-global/00-header.mustache
@@ -1,4 +1,5 @@
 <!--Begin .header -->
+{{> molecules-drop-down-nav }}
 <div class="header-container">
 <div class="header-wrap">
 <header class="header cf" role="banner">
