LC-834 styles calendar nav

--- a/source/_patterns/01-molecules/05-navigation/06-calendar-nav.mustache
+++ b/source/_patterns/01-molecules/05-navigation/06-calendar-nav.mustache
@@ -1,18 +1,20 @@
-<div id="weeknav" class="calnav">
-	<div class="calElement prev"></div>
-	<div class="calElement" style="width: 71px;">SUN<br>
-	<span class="dayNumber">Jun 14</span></div>
-	<div class="calElement" style="width: 71px;">MON<br>
-	<span class="dayNumber">Jun 15</span></div>
-	<div class="calElement selected" style="width: 71px;">TUE<br>
-	<span class="dayNumber">Jun 16</span></div>
-	<div class="calElement" style="width: 71px;">WED<br>
-	<span class="dayNumber">Jun 17</span></div>
-	<div class="calElement today" style="width: 71px;">THU<br>
-	<span class="dayNumber">Jun 18</span></div>
-	<div class="calElement" style="width: 71px;">FRI<br>
-	<span class="dayNumber">Jun 19</span></div>
-	<div class="calElement" style="width: 71px;">SAT<br>
-	<span class="dayNumber">Jun 20</span></div>
-	<div class="calElement next"></div>
+<div class="calnav">
+	<div class="calDay clearfix">
+		<a href="#"><div class="calElement prev"><div class="arrow"><</div></div></a>
+		<a href="#"><div class="calElement" style="width: 71px;">SUN<br>
+		<span class="dayNumber">Jun 14</span></div></a>
+		<a href="#"><div class="calElement" style="width: 71px;">MON<br>
+		<span class="dayNumber">Jun 15</span></div></a>
+		<a href="#"><div class="calElement selected" style="width: 71px;">TUE<br>
+		<span class="dayNumber">Jun 16</span></div></a>
+		<a href="#"><div class="calElement" style="width: 71px;">WED<br>
+		<span class="dayNumber">Jun 17</span></div></a>
+		<a href="#"><div class="calElement today" style="width: 71px;">THU<br>
+		<span class="dayNumber">Jun 18</span></div></a>
+		<a href="#"><div class="calElement" style="width: 71px;">FRI<br>
+		<span class="dayNumber">Jun 19</span></div></a>
+		<a href="#"><div class="calElement" style="width: 71px;">SAT<br>
+		<span class="dayNumber">Jun 20</span></div></a>
+		<a href="#"><div class="calElement next"><div class="arrow">></div></div></a>
+	</div>
 </div>
