LC-834 generates day calendar elements

--- a/source/_patterns/03-templates/03-calendar.mustache
+++ b/source/_patterns/03-templates/03-calendar.mustache
@@ -7,6 +7,7 @@
 		<div class="l-two-col">
 			<div class="l-main">
 				{{> molecules-calendar-nav }}
+				{{> organisms-calendar-day }}
 			</div><!--end l-main-->
 
 			<div class="l-sidebar">
