LC-837 calendat page style and nav update for mobile

--- a/source/_patterns/01-molecules/05-navigation/06-calendar-nav.mustache
+++ b/source/_patterns/01-molecules/05-navigation/06-calendar-nav.mustache
@@ -1,19 +1,19 @@
 <div class="calnav">
 	<div class="calDay clearfix">
 		<a href="#"><div class="calElement prev"><div class="arrow"><</div></div></a>
-		<a href="#"><div class="calElement" style="width: 71px;">SUN<br>
+		<a href="#"><div class="calElement">SUN<br>
 		<span class="dayNumber">Jun 14</span></div></a>
-		<a href="#"><div class="calElement" style="width: 71px;">MON<br>
+		<a href="#"><div class="calElement">MON<br>
 		<span class="dayNumber">Jun 15</span></div></a>
-		<a href="#"><div class="calElement selected" style="width: 71px;">TUE<br>
+		<a href="#"><div class="calElement selected">TUE<br>
 		<span class="dayNumber">Jun 16</span></div></a>
-		<a href="#"><div class="calElement" style="width: 71px;">WED<br>
+		<a href="#"><div class="calElement">WED<br>
 		<span class="dayNumber">Jun 17</span></div></a>
-		<a href="#"><div class="calElement today" style="width: 71px;">THU<br>
+		<a href="#"><div class="calElement today">THU<br>
 		<span class="dayNumber">Jun 18</span></div></a>
-		<a href="#"><div class="calElement" style="width: 71px;">FRI<br>
+		<a href="#"><div class="calElement">FRI<br>
 		<span class="dayNumber">Jun 19</span></div></a>
-		<a href="#"><div class="calElement" style="width: 71px;">SAT<br>
+		<a href="#"><div class="calElement">SAT<br>
 		<span class="dayNumber">Jun 20</span></div></a>
 		<a href="#"><div class="calElement next"><div class="arrow">></div></div></a>
 	</div>
