--- a/source/_patterns/02-organisms/04-calendar/00-calendar-day.mustache
+++ b/source/_patterns/02-organisms/04-calendar/00-calendar-day.mustache
@@ -5,59 +5,67 @@
         <div class="date-heading">
           <h3>Tuesday, June 16, 2015</h3>
         </div>
-        <ul class="pager">
-          <li class="date-prev">
-            <a href="http://www.lacity.org/city-government/elected-official-offices/city-council/council-calendar?date=2015-06-15" title="Navigate to previous day" rel="nofollow">&lt;&lt; Monday, June 15</a>
-          </li>
-          <li class="date-next">
-            <a href="http://www.lacity.org/city-government/elected-official-offices/city-council/council-calendar?date=2015-06-17" title="Navigate to next day" rel="nofollow">Wednesday, June 17 &gt;&gt;</a>
-          </li>
-        </ul>
       </div>
     </div>
   </div>
-  
-  
-  
-      <div class="view-content">
-      <div class="item-list">      <h3><span class="date-display-single">9:00 am</span></h3>
-    <ul>          <li class="views-row views-row-1 views-row-odd views-row-first">  
-          <a href="http://ens.lacity.org/clk/committeeagend/clkcommitteeagend3096361_06162015.html" target="_blank">Transportation Committee, Special Meeting</a>  </li>
+  <div class="view-content">
+    <div class="item-list">      
+      <h4><span class="date-display-single">9:00 am</span></h4>
+        <ul>
+          <li class="views-row views-row-1 views-row-odd views-row-first">  
+            <a href="http://ens.lacity.org/clk/committeeagend/clkcommitteeagend3096361_06162015.html" target="_blank">Transportation Committee, Special Meeting</a>
+          </li>
           <li class="views-row views-row-2 views-row-even views-row-last">  
-          <a href="http://ens.lacity.org/clk/committeeagend/clkcommitteeagend2196427_06162015.html" target="_blank">Education &amp; Neighborhoods Committee - SPECIAL MEETING</a>  </li>
-      </ul></div><div class="item-list">      <h3><span class="date-display-single">10:00 am</span></h3>
-    <ul>          <li class="views-row views-row-1 views-row-odd views-row-first views-row-last">  
-          <a href="http://ens.lacity.org/clk/councilagendas/clkcouncilagendas396437_06162015.html" target="_blank">Los Angeles City Council Agenda</a>  </li>
-      </ul></div><div class="item-list">      <h3><span class="date-display-single">1:00 pm</span></h3>
-    <ul>          <li class="views-row views-row-1 views-row-odd views-row-first views-row-last">  
-          <a href="http://ens.lacity.org/clk/committeeagend/clkcommitteeagend2196366_06162015.html" target="_blank">Education &amp; Neighborhoods Committee Meeting - CANCELLED</a>  </li>
-      </ul></div><div class="item-list">      <h3><span class="date-display-single">2:30 pm</span></h3>
-    <ul>          <li class="views-row views-row-1 views-row-odd views-row-first views-row-last">  
-          <a href="http://ens.lacity.org/clk/committeeagend/clkcommitteeagend2696442_06162015.html" target="_blank">Planning and Land Use Management Committee Meeting</a>  </li>
-      </ul></div><div class="item-list">      <h3><span class="date-display-single">3:00 pm</span></h3>
-    <ul>          <li class="views-row views-row-1 views-row-odd views-row-first">  
-          <a href="http://ens.lacity.org/clk/committeeagend/clkcommitteeagend1796394_06162015.html" target="_blank">Audits Committee Meeting</a>  </li>
-          <li class="views-row views-row-2 views-row-even views-row-last">  
-          <a href="http://ens.lacity.org/clk/committeeagend/clkcommitteeagend2596443_06162015.html" target="_blank">Personnel &amp; Animal Welfare Committee Meeting</a>  </li>
-      </ul></div>    </div>
-  
-      <div class="date-nav-wrapper clearfix">
-  <div class="date-nav item-list">
-    <div class="date-heading">
-      <h3>
-	Tuesday, June 16, 2015      </h3>
+            <a href="http://ens.lacity.org/clk/committeeagend/clkcommitteeagend2196427_06162015.html" target="_blank">Education &amp; Neighborhoods Committee - SPECIAL MEETING</a>
+          </li>
+        </ul>
+      </div>
+    <div class="item-list">
+      <h4><span class="date-display-single">10:00 am</span></h4>
+      <ul>
+        <li class="views-row views-row-1 views-row-odd views-row-first views-row-last">  
+          <a href="http://ens.lacity.org/clk/councilagendas/clkcouncilagendas396437_06162015.html" target="_blank">Los Angeles City Council Agenda</a>
+        </li>
+      </ul>
     </div>
-    <ul class="pager">
-      	<li class="date-prev">
-          <a href="http://www.lacity.org/city-government/elected-official-offices/city-council/council-calendar?date=2015-06-15" title="Navigate to previous day" rel="nofollow">&lt;&lt; Monday, June 15</a>	</li>
-            	<li class="date-next">
-          <a href="http://www.lacity.org/city-government/elected-official-offices/city-council/council-calendar?date=2015-06-17" title="Navigate to next day" rel="nofollow">Wednesday, June 17 &gt;&gt;</a>	</li>
-          </ul>
+    <div class="item-list">
+      <h4><span class="date-display-single">1:00 pm</span></h4>
+      <ul>
+        <li class="views-row views-row-1 views-row-odd views-row-first views-row-last">  
+          <a href="http://ens.lacity.org/clk/committeeagend/clkcommitteeagend2196366_06162015.html" target="_blank">Education &amp; Neighborhoods Committee Meeting - CANCELLED</a>
+        </li>
+      </ul>
+    </div>
+    <div class="item-list">
+      <h4><span class="date-display-single">2:30 pm</span></h4>
+        <ul>
+          <li class="views-row views-row-1 views-row-odd views-row-first views-row-last">  
+            <a href="http://ens.lacity.org/clk/committeeagend/clkcommitteeagend2696442_06162015.html" target="_blank">Planning and Land Use Management Committee Meeting</a>
+          </li>
+        </ul>
+    </div>
+    <div class="item-list">
+      <h4><span class="date-display-single">3:00 pm</span></h4>
+      <ul>
+        <li class="views-row views-row-1 views-row-odd views-row-first">  
+          <a href="http://ens.lacity.org/clk/committeeagend/clkcommitteeagend1796394_06162015.html" target="_blank">Audits Committee Meeting</a>
+        </li>
+        <li class="views-row views-row-2 views-row-even views-row-last">  
+         <a href="http://ens.lacity.org/clk/committeeagend/clkcommitteeagend2596443_06162015.html" target="_blank">Personnel &amp; Animal Welfare Committee Meeting</a>
+        </li>
+      </ul>
+    </div>
   </div>
-</div>
-  
-  
-  
-  
-  
+  <div class="date-nav-wrapper clearfix">
+    <div class="date-nav item-list">
+      <ul class="pager">
+        <li class="date-prev">
+          <a href="http://www.lacity.org/city-government/elected-official-offices/city-council/council-calendar?date=2015-06-15" title="Navigate to previous day" rel="nofollow">&lt;&lt; Monday, June 15</a>
+        </li>
+        <li class="date-next">
+          <a href="http://www.lacity.org/city-government/elected-official-offices/city-council/council-calendar?date=2015-06-17" title="Navigate to next day" rel="nofollow">Wednesday, June 17 &gt;&gt;</a>
+        </li>
+      </ul>
+    </div>
+  </div>
 </div>
