LC-837 sets mobile nav for calendar page

--- a/source/_patterns/01-molecules/05-navigation/06-calendar-nav.mustache
+++ b/source/_patterns/01-molecules/05-navigation/06-calendar-nav.mustache
@@ -18,3 +18,15 @@
 		<a href="#"><div class="calElement next"><div class="arrow">></div></div></a>
 	</div>
 </div>
+<div class="cal-pager-wrapper clearfix">
+    <div class="cal-pager item-list">
+      <ul class="pager">
+        <li class="date-prev">
+          <a href="http://www.lacity.org/city-government/elected-official-offices/city-council/council-calendar?date=2015-06-15" title="Navigate to previous day" rel="nofollow">&lt;&lt; Monday, June 15</a>
+        </li>
+        <li class="date-next">
+          <a href="http://www.lacity.org/city-government/elected-official-offices/city-council/council-calendar?date=2015-06-17" title="Navigate to next day" rel="nofollow">Wednesday, June 17 &gt;&gt;</a>
+        </li>
+      </ul>
+    </div>
+</div>
