--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1825,9 +1825,62 @@ body .wrapper:first-child {
   visibility: hidden;
 }
 
-/* line 11, scss/objects/_calendar.scss */
-.calnav {
+/* line 12, scss/objects/_calendar.scss */
+.cal-pager {
   display: block;
+}
+
+/* line 15, scss/objects/_calendar.scss */
+.calnav {
+  display: none;
+}
+
+@media all and (min-width: 720px) {
+  /* line 19, scss/objects/_calendar.scss */
+  .cal-pager {
+    display: none;
+  }
+
+  /* line 22, scss/objects/_calendar.scss */
+  .calnav {
+    display: block;
+  }
+}
+/* line 28, scss/objects/_calendar.scss */
+.cal-pager .pager {
+  list-style: none;
+  text-align: center;
+  font-weight: bold;
+}
+/* line 33, scss/objects/_calendar.scss */
+.cal-pager .pager li {
+  width: 100%;
+  background-color: #E0E0E0;
+  padding: 0.5em;
+  float: left;
+}
+/* line 39, scss/objects/_calendar.scss */
+.cal-pager .pager li.date-prev {
+  -webkit-border-radius: 5px 0 0 5px;
+  -ms-border-radius: 5px 0 0 5px;
+  -moz-border-radius: 5px 0 0 5px;
+  -o-border-radius: 5px 0 0 5px;
+  border-radius: 5px 0 0 5px;
+  width: 40%;
+  margin-right: 20%;
+}
+/* line 45, scss/objects/_calendar.scss */
+.cal-pager .pager li.date-next {
+  -webkit-border-radius: 0 5px 5px 0;
+  -ms-border-radius: 0 5px 5px 0;
+  -moz-border-radius: 0 5px 5px 0;
+  -o-border-radius: 0 5px 5px 0;
+  border-radius: 0 5px 5px 0;
+  width: 40%;
+}
+
+/* line 56, scss/objects/_calendar.scss */
+.calnav {
   background-color: #E0E0E0;
   padding: 4px 2px 4px 4px;
   text-align: center;
@@ -1840,21 +1893,19 @@ body .wrapper:first-child {
   -o-border-radius: 4px;
   border-radius: 4px;
 }
-/* line 21, scss/objects/_calendar.scss */
+/* line 65, scss/objects/_calendar.scss */
 .calnav .calDay {
-  display: block;
   width: 37em;
   margin: 0 auto;
 }
 @media all and (max-width: 720px) {
-  /* line 21, scss/objects/_calendar.scss */
+  /* line 65, scss/objects/_calendar.scss */
   .calnav .calDay {
     width: 100vw;
   }
 }
-/* line 29, scss/objects/_calendar.scss */
+/* line 72, scss/objects/_calendar.scss */
 .calnav .calDay .calElement {
-  display: block;
   margin: 3px;
   overflow: hidden;
   float: left;
@@ -1870,23 +1921,23 @@ body .wrapper:first-child {
   border-radius: 3px;
 }
 @media all and (min-width: 720px) {
-  /* line 29, scss/objects/_calendar.scss */
+  /* line 72, scss/objects/_calendar.scss */
   .calnav .calDay .calElement {
     width: 71px;
   }
 }
-/* line 46, scss/objects/_calendar.scss */
+/* line 88, scss/objects/_calendar.scss */
 .calnav .calDay .calElement:hover {
   background-color: #212121;
   color: #fff;
 }
-/* line 52, scss/objects/_calendar.scss */
+/* line 94, scss/objects/_calendar.scss */
 .calnav .calDay .today {
   background-color: #fff;
   border-radius: 3px;
   color: #212121;
 }
-/* line 58, scss/objects/_calendar.scss */
+/* line 100, scss/objects/_calendar.scss */
 .calnav .calDay .prev, .calnav .calDay .next {
   width: 18px;
   background-color: #E0E0E0;
@@ -1897,69 +1948,36 @@ body .wrapper:first-child {
   -o-border-radius: 4px;
   border-radius: 4px;
 }
-/* line 63, scss/objects/_calendar.scss */
+/* line 105, scss/objects/_calendar.scss */
 .calnav .calDay .prev:hover, .calnav .calDay .next:hover {
   background-color: #fff;
   color: #212121;
 }
-/* line 68, scss/objects/_calendar.scss */
+/* line 110, scss/objects/_calendar.scss */
 .calnav .calDay .prev .arrow, .calnav .calDay .next .arrow {
   margin-top: 0.65em;
   font-weight: bold;
 }
 
-/* line 78, scss/objects/_calendar.scss */
+/* line 122, scss/objects/_calendar.scss */
 .view-events-calendar-with-ens {
   padding-bottom: 2em;
 }
-/* line 81, scss/objects/_calendar.scss */
+/* line 125, scss/objects/_calendar.scss */
 .view-events-calendar-with-ens .date-heading {
   width: 100%;
   text-align: center;
   margin-top: 2em;
 }
-/* line 87, scss/objects/_calendar.scss */
+/* line 131, scss/objects/_calendar.scss */
 .view-events-calendar-with-ens .view-content {
   margin-top: 2em;
 }
-/* line 89, scss/objects/_calendar.scss */
+/* line 133, scss/objects/_calendar.scss */
 .view-events-calendar-with-ens .view-content ul {
   margin: 1em 0 1em 2em;
   padding: 0;
   list-style: initial;
-}
-/* line 95, scss/objects/_calendar.scss */
-.view-events-calendar-with-ens .pager {
-  list-style: none;
-  text-align: center;
-  font-weight: bold;
-  margin-top: 2em;
-}
-/* line 101, scss/objects/_calendar.scss */
-.view-events-calendar-with-ens .pager li {
-  width: 100%;
-  background-color: #E0E0E0;
-  padding: 0.5em;
-  float: left;
-}
-/* line 107, scss/objects/_calendar.scss */
-.view-events-calendar-with-ens .pager li.date-prev {
-  -webkit-border-radius: 5px 0 0 5px;
-  -ms-border-radius: 5px 0 0 5px;
-  -moz-border-radius: 5px 0 0 5px;
-  -o-border-radius: 5px 0 0 5px;
-  border-radius: 5px 0 0 5px;
-  width: 40%;
-  margin-right: 20%;
-}
-/* line 113, scss/objects/_calendar.scss */
-.view-events-calendar-with-ens .pager li.date-next {
-  -webkit-border-radius: 0 5px 5px 0;
-  -ms-border-radius: 0 5px 5px 0;
-  -moz-border-radius: 0 5px 5px 0;
-  -o-border-radius: 0 5px 5px 0;
-  border-radius: 0 5px 5px 0;
-  width: 40%;
 }
 
 /* Generic Placeholder Brick: REMOVE FOR PRODUCTION */
