--- a/source/_patterns/03-templates/02-article.mustache
+++ b/source/_patterns/03-templates/02-article.mustache
@@ -22,6 +22,7 @@
 			</div><!--end l-sidebar-->
 		</div><!--end l-two-col-->	
 	</div><!--End role=main-->
+	{{> organisms-slab-posts }}
 	{{> organisms-footer }}
 	{{> molecules-social-share }}
 </div>
