LC-837 updates to drop down menu content

--- a/source/_patterns/01-molecules/05-navigation/01-drop-down-nav.mustache
+++ b/source/_patterns/01-molecules/05-navigation/01-drop-down-nav.mustache
@@ -1,7 +1,14 @@
 <div class="drop-down">
-	<ul>
+	<ul class="lvl1">
 		<li>Home</li>
 		<li>Innovation Fund ></li>
+		<ul class="lvl2">
+			<li>Overview</li>
+			<li>Submit</li>
+			<li>FAQ</li>
+			<li>Ideas</li>
+			<li>Outreach Materials</li>
+		</ul>
 		<li>Agendas & Minutes ></li>
 		<li>Calendar</li>
 		<li>What's New ></li>
