--- a/source/css/scss/objects/_nav.scss
+++ b/source/css/scss/objects/_nav.scss
@@ -96,27 +96,48 @@
 	display: none;
 	position: absolute;
 	top: 0%;
-	background: $gray-med;
+	background: $classicblue;
 	width: 100%;
 	height: 100%;
 	z-index: 100;
 	
 	ul {
-		margin-top: 12em;
-		margin-left: 9.9%;
-	}
-
-	li {
-		color: $white;
-		font-size: 1.625em;
-		line-height: 1.15384615em;
-		@media all and (min-width: $bp-med-2){
-			font-size: 2em;
-			line-height: 1.25em;
+		&.lvl1 {
+			max-width: 1020px;
+			width: 80vw;
+			margin: 14em auto 0;
+			li {
+				color: $white;
+				font-weight: bold;
+				font-size: 1.625em;
+				line-height: 1.15384615em;
+				@media all and (min-width: $bp-med-2){
+					font-size: 2em;
+					line-height: 1.25em;
+				}
+				@media all and (min-width: $bp-large){
+					font-size: 2.25em;
+					line-height: 1.25em;
+				}
+			}
 		}
-		@media all and (min-width: $bp-large){
-			font-size: 2.25em;
-			line-height: 1.25em;
+		&.lvl2 {
+			width: 60vw;
+			margin: 1em 0 1em 2em;
+			li {
+				color: $white;
+				font-weight: normal;
+				font-size: 1em;
+				line-height: 1.15384615em;
+				@media all and (min-width: $bp-med-2){
+					font-size: 1.5em;
+					line-height: 1.25em;
+				}
+				@media all and (min-width: $bp-large){
+					font-size: 2em;
+					line-height: 1.25em;
+				}
+			}
 		}
 	}
 }
