--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1258,33 +1258,61 @@ td {
   display: none;
   position: absolute;
   top: 0%;
-  background: #474747;
+  background: #014982;
   width: 100%;
   height: 100%;
   z-index: 100;
 }
-/* line 104, scss/objects/_nav.scss */
-.drop-down ul {
-  margin-top: 12em;
-  margin-left: 9.9%;
+/* line 105, scss/objects/_nav.scss */
+.drop-down ul.lvl1 {
+  max-width: 1020px;
+  width: 80vw;
+  margin: 14em auto 0;
 }
 /* line 109, scss/objects/_nav.scss */
-.drop-down li {
+.drop-down ul.lvl1 li {
   color: #fff;
+  font-weight: bold;
   font-size: 1.625em;
   line-height: 1.15384615em;
 }
 @media all and (min-width: 720px) {
   /* line 109, scss/objects/_nav.scss */
-  .drop-down li {
+  .drop-down ul.lvl1 li {
     font-size: 2em;
     line-height: 1.25em;
   }
 }
 @media all and (min-width: 960px) {
   /* line 109, scss/objects/_nav.scss */
-  .drop-down li {
+  .drop-down ul.lvl1 li {
     font-size: 2.25em;
+    line-height: 1.25em;
+  }
+}
+/* line 124, scss/objects/_nav.scss */
+.drop-down ul.lvl2 {
+  width: 60vw;
+  margin: 1em 0 1em 2em;
+}
+/* line 127, scss/objects/_nav.scss */
+.drop-down ul.lvl2 li {
+  color: #fff;
+  font-weight: normal;
+  font-size: 1em;
+  line-height: 1.15384615em;
+}
+@media all and (min-width: 720px) {
+  /* line 127, scss/objects/_nav.scss */
+  .drop-down ul.lvl2 li {
+    font-size: 1.5em;
+    line-height: 1.25em;
+  }
+}
+@media all and (min-width: 960px) {
+  /* line 127, scss/objects/_nav.scss */
+  .drop-down ul.lvl2 li {
+    font-size: 2em;
     line-height: 1.25em;
   }
 }
