LC-837 shows header on small res screens

--- a/source/css/scss/objects/_blocks.scss
+++ b/source/css/scss/objects/_blocks.scss
@@ -25,6 +25,10 @@
 	margin-bottom: $space-half;
 	max-height: 700px;
 	overflow: hidden;
+	margin-top: 7.1em;
+	@media all and (min-width: $bp-med-2) {
+		margin-top: 0;
+	}
 	.b-thumb {
 		img {
 			max-width: 1920px;
