--- a/source/css/scss/objects/_header.scss
+++ b/source/css/scss/objects/_header.scss
@@ -17,6 +17,7 @@
 		width: 100%;
 	}
 	@media all and (max-width: $bp-med-2) {
+		position: absolute;
 		top: 0;
 		width: 100%;
 		background: $classicblue;
