--- a/source/css/style.css
+++ b/source/css/style.css
@@ -959,13 +959,14 @@ td {
 @media all and (max-width: 720px) {
   /* line 10, scss/objects/_header.scss */
   .header-wrap {
+    position: absolute;
     top: 0;
     width: 100%;
     background: #014982;
   }
 }
 
-/* line 25, scss/objects/_header.scss */
+/* line 26, scss/objects/_header.scss */
 .header-wrap-background {
   background: #212121;
   height: 105px;
@@ -975,7 +976,7 @@ td {
   /* For IE8 and earlier */
 }
 @media all and (min-width: 720px) {
-  /* line 25, scss/objects/_header.scss */
+  /* line 26, scss/objects/_header.scss */
   .header-wrap-background {
     display: block;
     position: absolute;
@@ -983,7 +984,7 @@ td {
   }
 }
 @media all and (max-width: 720px) {
-  /* line 25, scss/objects/_header.scss */
+  /* line 26, scss/objects/_header.scss */
   .header-wrap-background {
     position: absolute;
     top: 0;
@@ -992,7 +993,7 @@ td {
   }
 }
 
-/* line 44, scss/objects/_header.scss */
+/* line 45, scss/objects/_header.scss */
 .header-wrap-background-blur {
   max-width: 1910px;
   width: 100%;
@@ -1013,7 +1014,7 @@ td {
   padding: 0px;
 }
 @media all and (min-width: 720px) {
-  /* line 44, scss/objects/_header.scss */
+  /* line 45, scss/objects/_header.scss */
   .header-wrap-background-blur {
     display: block;
     position: absolute;
@@ -1023,7 +1024,7 @@ td {
   }
 }
 @media all and (max-width: 720px) {
-  /* line 44, scss/objects/_header.scss */
+  /* line 45, scss/objects/_header.scss */
   .header-wrap-background-blur {
     position: absolute;
     top: 0;
@@ -1032,49 +1033,49 @@ td {
   }
 }
 
-/* line 77, scss/objects/_header.scss */
+/* line 78, scss/objects/_header.scss */
 .home .header-wrap-background-blur {
   background-image: url("../images/hero.jpg");
 }
 
-/* line 80, scss/objects/_header.scss */
+/* line 81, scss/objects/_header.scss */
 .blog .header-wrap-background-blur {
   background-image: url("../images/hero_2nd.jpg");
 }
 
-/* line 83, scss/objects/_header.scss */
+/* line 84, scss/objects/_header.scss */
 .article .header-wrap-background-blur {
   background-image: url("../images/hero_2nd.jpg");
 }
 
-/* line 86, scss/objects/_header.scss */
+/* line 87, scss/objects/_header.scss */
 .header {
   display: block;
   max-width: 310px;
 }
 @media all and (min-width: 720px) {
-  /* line 86, scss/objects/_header.scss */
+  /* line 87, scss/objects/_header.scss */
   .header {
     padding: 0 10px;
     max-width: 1020px;
   }
 }
 
-/* line 96, scss/objects/_header.scss */
+/* line 97, scss/objects/_header.scss */
 .logo {
   float: left;
   max-width: 5.5em;
   margin: 0.8em 0 0.8em 1.4em;
 }
 @media all and (min-width: 720px) {
-  /* line 96, scss/objects/_header.scss */
+  /* line 97, scss/objects/_header.scss */
   .logo {
     max-width: 9rem;
     margin: 0;
   }
 }
 
-/* line 107, scss/objects/_header.scss */
+/* line 108, scss/objects/_header.scss */
 .title {
   float: left;
   margin: 1.2em 0 0 1em;
@@ -1085,7 +1086,7 @@ td {
   margin-bottom: 0;
 }
 @media all and (min-width: 720px) {
-  /* line 107, scss/objects/_header.scss */
+  /* line 108, scss/objects/_header.scss */
   .title {
     font-size: 1.55em;
     line-height: 1.25em;
@@ -1095,7 +1096,7 @@ td {
   }
 }
 @media all and (min-width: 960px) {
-  /* line 107, scss/objects/_header.scss */
+  /* line 108, scss/objects/_header.scss */
   .title {
     font-size: 2em;
     line-height: 1.25em;
@@ -1105,7 +1106,7 @@ td {
   }
 }
 
-/* line 131, scss/objects/_header.scss */
+/* line 132, scss/objects/_header.scss */
 .nav-toggle {
   float: right;
   display: block;
@@ -1115,26 +1116,26 @@ td {
   border-left: 1px solid #dbdbdb;
 }
 @media all and (min-width: 480px) {
-  /* line 131, scss/objects/_header.scss */
+  /* line 132, scss/objects/_header.scss */
   .nav-toggle {
     display: none;
   }
 }
 @media all and (max-width: 17em) {
-  /* line 131, scss/objects/_header.scss */
+  /* line 132, scss/objects/_header.scss */
   .nav-toggle {
     padding-left: 0.2rem;
     padding-right: 0.2rem;
   }
 }
 
-/* line 149, scss/objects/_header.scss */
+/* line 150, scss/objects/_header.scss */
 .search-form {
   overflow: hidden;
   max-height: 0;
 }
 @media all and (min-width: 480px) {
-  /* line 149, scss/objects/_header.scss */
+  /* line 150, scss/objects/_header.scss */
   .search-form {
     float: right;
     max-height: none;
@@ -2038,9 +2039,16 @@ body .wrapper:first-child {
   margin-bottom: 0.5em;
   max-height: 700px;
   overflow: hidden;
+  margin-top: 7.1em;
   position: relative;
 }
-/* line 29, scss/objects/_blocks.scss */
+@media all and (min-width: 720px) {
+  /* line 24, scss/objects/_blocks.scss */
+  .block-hero {
+    margin-top: 0;
+  }
+}
+/* line 33, scss/objects/_blocks.scss */
 .block-hero .b-thumb img {
   max-width: 1920px;
   display: block;
@@ -2048,7 +2056,7 @@ body .wrapper:first-child {
   margin-left: auto;
   margin-right: auto;
 }
-/* line 40, scss/objects/_blocks.scss */
+/* line 44, scss/objects/_blocks.scss */
 .block-hero .b-text {
   max-width: 1024px;
   position: absolute;
@@ -2067,7 +2075,7 @@ body .wrapper:first-child {
   -o-border-radius: 10px;
   border-radius: 10px;
 }
-/* line 56, scss/objects/_blocks.scss */
+/* line 60, scss/objects/_blocks.scss */
 .block-hero .b-title {
   text-transform: uppercase;
   color: #fff;
@@ -2075,14 +2083,14 @@ body .wrapper:first-child {
   line-height: 1.25em;
 }
 @media all and (min-width: 720px) {
-  /* line 56, scss/objects/_blocks.scss */
+  /* line 60, scss/objects/_blocks.scss */
   .block-hero .b-title {
     font-size: 2.25em;
     line-height: 1.125em;
   }
 }
 @media all and (min-width: 960px) {
-  /* line 56, scss/objects/_blocks.scss */
+  /* line 60, scss/objects/_blocks.scss */
   .block-hero .b-title {
     font-size: 3em;
     line-height: 1.05em;
@@ -2090,27 +2098,27 @@ body .wrapper:first-child {
 }
 
 /* Block Thumbnail with Headline */
-/* line 73, scss/objects/_blocks.scss */
+/* line 77, scss/objects/_blocks.scss */
 .block-thumb {
   display: table;
   width: 100%;
   border-collapse: collapse;
 }
-/* line 78, scss/objects/_blocks.scss */
+/* line 82, scss/objects/_blocks.scss */
 .block-thumb .b-inner {
   display: table-row;
   vertical-align: top;
   overflow: hidden;
 }
 @media all and (min-width: 29.75em) {
-  /* line 84, scss/objects/_blocks.scss */
+  /* line 88, scss/objects/_blocks.scss */
   .block-thumb .b-thumb {
     display: table-cell;
     vertical-align: top;
     width: 20%;
     max-width: 10em;
   }
-  /* line 91, scss/objects/_blocks.scss */
+  /* line 95, scss/objects/_blocks.scss */
   .block-thumb .b-thumb img {
     display: block;
     width: 100%;
@@ -2118,7 +2126,7 @@ body .wrapper:first-child {
   }
 }
 @media all and (min-width: 29.75em) {
-  /* line 99, scss/objects/_blocks.scss */
+  /* line 103, scss/objects/_blocks.scss */
   .block-thumb .b-text {
     display: table-cell;
     width: 70%;
@@ -2127,39 +2135,39 @@ body .wrapper:first-child {
 }
 
 /* Block Headline Summary */
-/* line 111, scss/objects/_blocks.scss */
+/* line 115, scss/objects/_blocks.scss */
 .block-headline-summary a {
   display: block;
   padding: 0.5em;
 }
 
 /* Block Inset */
-/* line 118, scss/objects/_blocks.scss */
+/* line 122, scss/objects/_blocks.scss */
 .block-inset {
   position: relative;
   width: 100%;
 }
-/* line 122, scss/objects/_blocks.scss */
+/* line 126, scss/objects/_blocks.scss */
 .block-inset .b-thumb {
   position: relative;
   z-index: 0;
 }
-/* line 126, scss/objects/_blocks.scss */
+/* line 130, scss/objects/_blocks.scss */
 .block-inset .b-thumb img {
   display: block;
 }
 
 /* Hero Block */
-/* line 133, scss/objects/_blocks.scss */
+/* line 137, scss/objects/_blocks.scss */
 .block-inset {
   margin-bottom: 0.5em;
   position: relative;
 }
-/* line 137, scss/objects/_blocks.scss */
+/* line 141, scss/objects/_blocks.scss */
 .block-inset .headline {
   font-size: 1.1em;
 }
-/* line 141, scss/objects/_blocks.scss */
+/* line 145, scss/objects/_blocks.scss */
 .block-inset .b-text {
   position: absolute;
   bottom: 0;
@@ -2171,12 +2179,12 @@ body .wrapper:first-child {
 }
 
 /* Block Thumb with Summary */
-/* line 154, scss/objects/_blocks.scss */
+/* line 158, scss/objects/_blocks.scss */
 .block-thumb-summary .b-thumb {
   float: left;
   width: 50%;
 }
-/* line 159, scss/objects/_blocks.scss */
+/* line 163, scss/objects/_blocks.scss */
 .block-thumb-summary .b-text {
   margin-left: 50%;
   padding: 0.5em;
