LC-837 removes live links from calendar page

--- a/source/_patterns/01-molecules/05-navigation/06-calendar-nav.mustache
+++ b/source/_patterns/01-molecules/05-navigation/06-calendar-nav.mustache
@@ -22,10 +22,10 @@
     <div class="cal-pager item-list">
       <ul class="pager">
         <li class="date-prev">
-          <a href="http://www.lacity.org/city-government/elected-official-offices/city-council/council-calendar?date=2015-06-15" title="Navigate to previous day" rel="nofollow">&lt;&lt; Monday, June 15</a>
+          <a href="#" title="Navigate to previous day" rel="nofollow">&lt;&lt; Monday, June 15</a>
         </li>
         <li class="date-next">
-          <a href="http://www.lacity.org/city-government/elected-official-offices/city-council/council-calendar?date=2015-06-17" title="Navigate to next day" rel="nofollow">Wednesday, June 17 &gt;&gt;</a>
+          <a href="#" title="Navigate to next day" rel="nofollow">Wednesday, June 17 &gt;&gt;</a>
         </li>
       </ul>
     </div>
