--- a/source/_patterns/02-organisms/04-calendar/00-calendar-day.mustache
+++ b/source/_patterns/02-organisms/04-calendar/00-calendar-day.mustache
@@ -13,10 +13,10 @@
       <h4><span class="date-display-single">9:00 am</span></h4>
         <ul>
           <li class="views-row views-row-1 views-row-odd views-row-first">  
-            <a href="http://ens.lacity.org/clk/committeeagend/clkcommitteeagend3096361_06162015.html" target="_blank">Transportation Committee, Special Meeting</a>
+            <a href="#" target="_blank">Transportation Committee, Special Meeting</a>
           </li>
           <li class="views-row views-row-2 views-row-even views-row-last">  
-            <a href="http://ens.lacity.org/clk/committeeagend/clkcommitteeagend2196427_06162015.html" target="_blank">Education &amp; Neighborhoods Committee - SPECIAL MEETING</a>
+            <a href="#" target="_blank">Education &amp; Neighborhoods Committee - SPECIAL MEETING</a>
           </li>
         </ul>
       </div>
@@ -24,7 +24,7 @@
       <h4><span class="date-display-single">10:00 am</span></h4>
       <ul>
         <li class="views-row views-row-1 views-row-odd views-row-first views-row-last">  
-          <a href="http://ens.lacity.org/clk/councilagendas/clkcouncilagendas396437_06162015.html" target="_blank">Los Angeles City Council Agenda</a>
+          <a href="#" target="_blank">Los Angeles City Council Agenda</a>
         </li>
       </ul>
     </div>
@@ -32,7 +32,7 @@
       <h4><span class="date-display-single">1:00 pm</span></h4>
       <ul>
         <li class="views-row views-row-1 views-row-odd views-row-first views-row-last">  
-          <a href="http://ens.lacity.org/clk/committeeagend/clkcommitteeagend2196366_06162015.html" target="_blank">Education &amp; Neighborhoods Committee Meeting - CANCELLED</a>
+          <a href="#" target="_blank">Education &amp; Neighborhoods Committee Meeting - CANCELLED</a>
         </li>
       </ul>
     </div>
@@ -40,7 +40,7 @@
       <h4><span class="date-display-single">2:30 pm</span></h4>
         <ul>
           <li class="views-row views-row-1 views-row-odd views-row-first views-row-last">  
-            <a href="http://ens.lacity.org/clk/committeeagend/clkcommitteeagend2696442_06162015.html" target="_blank">Planning and Land Use Management Committee Meeting</a>
+            <a href="#" target="_blank">Planning and Land Use Management Committee Meeting</a>
           </li>
         </ul>
     </div>
@@ -48,10 +48,10 @@
       <h4><span class="date-display-single">3:00 pm</span></h4>
       <ul>
         <li class="views-row views-row-1 views-row-odd views-row-first">  
-          <a href="http://ens.lacity.org/clk/committeeagend/clkcommitteeagend1796394_06162015.html" target="_blank">Audits Committee Meeting</a>
+          <a href="#" target="_blank">Audits Committee Meeting</a>
         </li>
         <li class="views-row views-row-2 views-row-even views-row-last">  
-         <a href="http://ens.lacity.org/clk/committeeagend/clkcommitteeagend2596443_06162015.html" target="_blank">Personnel &amp; Animal Welfare Committee Meeting</a>
+         <a href="#" target="_blank">Personnel &amp; Animal Welfare Committee Meeting</a>
         </li>
       </ul>
     </div>
