LC-837 sets styles for tweets page

--- a/source/_patterns/03-templates/04-tweets.mustache
+++ b/source/_patterns/03-templates/04-tweets.mustache
@@ -6,7 +6,9 @@
 	<div role="main">
 		<div class="l-two-col">
 			<div class="l-main">
+				<h1>Tweets</h1>
 				{{> organisms-tweets-list }}
+				{{> molecules-pager }}
 			</div><!--end l-main-->
 
 			<div class="l-sidebar">
