LC-837 adds margin to bottom of tweets pager

--- a/source/css/scss/objects/_tweets.scss
+++ b/source/css/scss/objects/_tweets.scss
@@ -58,6 +58,7 @@
 
 .pager {
 	text-align: center;
+	margin-bottom: 2em;
 	.pager-current, .pager-item, .pager-ellipsis, .pager-next, .pager-last  {
 		display: inline;
 		padding: 0 0.5em;
