LC-837 updates comments pager and form spacing

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -2564,6 +2564,11 @@ body .wrapper:first-child {
   margin-left: 9em;
 }
 
+/* line 32, scss/objects/_comments.scss */
+ul.comment-list {
+  margin-top: 2em;
+}
+
 /*------------------------------------*\
     $MESSAGING
 \*------------------------------------*/
